--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <title>Rock, Paper, Scissors</title>
-        <script src="index.js"></script>
     </head>
-    <body></body>
+    <body>
+        <div id="results"></div>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+        <script src="index.js"></script>
+    </body>
 </html>
